[package]
name = "pomapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt", "macros", "net"] }
uuid = { version = "1.12", features = ["serde", "v4"] }

